# hm-semester

./: .gitignore  README.md  pyproject.toml  semester.py
.github/workflows/: pypi-release.yml  unit-tests.yml
examples/: create_agenda_example.py
src/hm_semester/: agenda.py  semester.py  util.py
tests/: test_agenda.py  test_semester.py  test_util.py
