[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hm_semester"
version = "0.1.0"
description = "A Python package for semester-related utilities."
authors = [
    { name = "David M. Straub" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "icalendar>=5.0.0",
    "click>=8.0.0"
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/DavidMStraub/hm-semester"
